--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,8 @@ BEM - Block Element Modifier
 @import 'base/utilities';
 
 @import 'components/button';
+@import 'components/composition';
 @import 'layout/header';
+@import 'layout/grid';
 @import 'base/typography';
 @import 'pages/home';
