--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -4,3 +4,27 @@
   padding: 25rem 0;
   margin-top: -20vh;
 }
+/*direct children skew in the opposite direction*/
+/*negative margine - move on top*/
+/*transform: skewY(7deg) == clip-path: polygon(0 25vh, 100% 0, 100% 75vh, 0 100%);*/
+.section-features {
+  padding: 20rem 0;
+  background-image: linear-gradient(
+      to right bottom,
+      rgba($color-primary-light, 0.8),
+      rgba($color-primary-dark, 0.8)
+    ),
+    url(../img/nat-4.jpg);
+  background-size: cover;
+  transform: skewY(-7deg);
+  margin-top: -10rem;
+  & > * {
+    transform: skewY(7deg);
+  }
+}
+
+.section-tours {
+  background-color: $color-grey-light-1;
+  padding: 25rem 0 15rem 0;
+  margin-top: -10rem;
+}
