--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,7 @@ BEM - Block Element Modifier
 @import 'components/composition';
 @import 'components/feature-box';
 @import 'components/card';
+@import 'components/story';
 @import 'layout/header';
 @import 'layout/grid';
 @import 'base/typography';
