--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,8 @@ BEM - Block Element Modifier
 @import 'components/feature-box';
 @import 'components/card';
 @import 'components/story';
+@import 'components/bg-video';
+
 @import 'layout/header';
 @import 'layout/grid';
 @import 'base/typography';
