--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,7 @@ BEM - Block Element Modifier
 @import 'components/card';
 @import 'components/story';
 @import 'components/bg-video';
+@import 'components/form';
 
 @import 'layout/header';
 @import 'layout/grid';
