--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,5 +20,6 @@ BEM - Block Element Modifier
 
 @import 'layout/header';
 @import 'layout/grid';
+@import 'layout/footer';
 @import 'base/typography';
 @import 'pages/home';
