--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,9 +17,11 @@ BEM - Block Element Modifier
 @import 'components/story';
 @import 'components/bg-video';
 @import 'components/form';
+@import 'components/_popup';
 
 @import 'layout/header';
 @import 'layout/grid';
 @import 'layout/footer';
+@import 'layout/navigation';
 @import 'base/typography';
 @import 'pages/home';
