--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,7 +17,7 @@ BEM - Block Element Modifier
 @import 'components/story';
 @import 'components/bg-video';
 @import 'components/form';
-@import 'components/_popup';
+@import 'components/popup';
 
 @import 'layout/header';
 @import 'layout/grid';
