--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -6,7 +6,12 @@
   left: 0;
   background-color: rgba($color-black, 0.8);
   z-index: 5000;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s;
+
   //overflow: hidden used since without it images overflow the border-radius property
+  //for openning effect: opacity: 0 and need include translate(...) from mixins since we cannot have 2 lines transform for one element
   &__content {
     @include centerAbsolute;
     width: 75%;
@@ -15,6 +20,9 @@
     border-radius: 3px;
     display: table;
     overflow: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.3);
+    transition: all 0.4s 0.2s; //0.2s - delay
   }
 
   &__left {
@@ -44,5 +52,33 @@
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto;
+  }
+  //Open state
+  &:target {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  &:target &__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
+
+  &__close {
+    &:link,
+    &:visited {
+      color: $color-grey-dark;
+      position: absolute;
+      top: 2.5rem;
+      right: 2.5rem;
+      font-size: 3rem;
+      text-decoration: none;
+      display: inline-block;
+      transition: all 0.2s;
+      line-height: 1;
+    }
+    &:hover {
+      color: $color-primary;
+    }
   }
 }
