--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,8 +9,28 @@
 /*default browser is 16px ==> 10px/16px = 0.625*/
 html {
   //defines what 1rem is
-  font-size: 62.5%;
+  font-size: 62.5%; //10px
+
+  @include respond(tab-land) {
+    //width < 1200px
+    font-size: 56.26%; //1rem = 9px, 9/16 = .5625
+  }
+
+  @include respond(tab-port) {
+    //width < 900px
+    font-size: 50%; //1rem = 8px, 8/16 = .5
+  }
+
+  @include respond(big-desk) {
+    //width > 1800px
+    font-size: 75%; //1rem = 12px, 12/16 = 0.75
+  }
 }
+
 body {
   box-sizing: border-box;
+  padding: 3rem;
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
