--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,7 +3,6 @@ body {
   font-weight: 400;
   line-height: 1.7;
   color: $color-grey-dark;
-  padding: 3rem;
 }
 /*backface-visibility - on animation the backpart of the top element can be visible or hidden */
 .heading-primary {
@@ -24,6 +23,10 @@ body {
     /* animation-delay: 3s;
     animation-iteration-count: 3;
     */
+    @include respond(phone) {
+      letter-spacing: 1rem;
+      font-size: 5rem;
+    }
   }
 
   &--sub {
@@ -32,6 +35,10 @@ body {
     font-weight: 400;
     letter-spacing: 1.74rem;
     animation: moveInRight 2s ease-out;
+
+    @include respond(phone) {
+      letter-spacing: 0.5rem;
+    }
   }
 }
 
@@ -46,9 +53,18 @@ body {
     $color-primary-dark
   );
   -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
   letter-spacing: 0.2rem;
   transition: all, 0.2s;
+
+  @include respond(tab-port) {
+    font-size: 3rem;
+  }
+  @include respond(phone) {
+    font-size: 2.5rem;
+  }
+
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.3);
