--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -3,6 +3,9 @@
   background-color: $color-grey-light-1;
   padding: 25rem 0;
   margin-top: -20vh;
+  @include respond(tab-port) {
+    padding: 20rem 0;
+  }
 }
 /*direct children skew in the opposite direction*/
 /*negative margine - move on top*/
@@ -18,8 +21,12 @@
   background-size: cover;
   transform: skewY(-7deg);
   margin-top: -10rem;
+
   & > * {
     transform: skewY(7deg);
+  }
+  @include respond(tab-port) {
+    padding: 10rem 0;
   }
 }
 
@@ -27,19 +34,29 @@
   background-color: $color-grey-light-1;
   padding: 25rem 0 15rem 0;
   margin-top: -10rem;
+  @include respond(tab-port) {
+    padding: 20rem 0 10rem 0;
+  }
 }
 .section-stories {
   padding: 15rem 0;
   // background-color: $color-grey-light-1;
   position: relative;
+
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
 }
 .section-book {
-  padding: 50rem 0;
+  padding: 15rem 0;
   background-image: linear-gradient(
     to right bottom,
     $color-primary-light,
     $color-primary-dark
   );
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
 }
 //background-size: 100%; == background-size: cover;
 
