--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -28,6 +28,10 @@
   &__left {
     width: 33.333333%;
     display: table-cell;
+    @include respond(tab-land) {
+      display: table-row;
+      width: 50%;
+    }
   }
   &__right {
     width: 66.6666667%;
@@ -38,6 +42,17 @@
   &__img {
     display: block;
     width: 100%;
+    height: 50vh;
+    &:first-child,
+    &:last-child {
+      @include respond(tab-land) {
+        float: left;
+        width: 50%;
+      }
+      @include respond(phone) {
+        display: none;
+      }
+    }
   }
   &__text {
     font-size: 1.4rem;
@@ -52,6 +67,10 @@
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto;
+    @include respond(tab-land) {
+      -moz-column-count: 1;
+      column-count: 1;
+    }
   }
   //Open state
   &:target {
