--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -8,6 +8,14 @@
   padding-left: 9rem;
   font-size: $default-font-size;
   transform: skewX(-12deg);
+  @include respond(tab-port) {
+    width: 100%;
+    padding: 4rem;
+    padding-left: 7rem;
+  }
+  @include respond(phone) {
+    transform: skewX(0);
+  }
 
   //shape-outside only works if element is floated and has height and width
   //cannot use transform property targeting same element (like & > * {transform:...}) so that need to put that property for each element separately
@@ -21,6 +29,10 @@
     clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(12deg);
     position: relative;
+
+    @include respond(phone) {
+      transform: translateX(-3rem) skewX(0);
+    }
   }
 
   &__img {
@@ -31,6 +43,9 @@
   }
   &__text {
     transform: skewX(12deg);
+    @include respond(phone) {
+      transform: skewX(0);
+    }
   }
   &__caption {
     position: absolute;
