--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -17,10 +17,10 @@
   &__logo {
     width: 15rem;
     height: auto;
-    @include respond(tab-port) {
-      width: 7.5rem;
-      height: auto;
-    }
+    // @include respond(tab-port) {
+    //   width: 7.5rem;
+    //   height: auto;
+    // }
   }
   &__navigation {
     border-top: 1px solid $color-grey-dark;
